[project]
name = "ecg-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "wfdb>=4.3.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"

